--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ torch~=1.5.1
 torchvision~=0.6.1
 h5py~=2.10.0
 Pillow~=7.2.0
-efficientnet_pytorch~=0.6.3
+efficientnet_pytorch~=0.6.3p
 imageio~=2.9.0
 matplotlib~=3.3.0
